Clean up jump nav and make sure all assemblies can use it

--- a/_docker/drupal/drupal-filesystem/web/themes/custom/rhdp/rhd-frontend/src/styles/assembly/_assembly.scss
+++ b/_docker/drupal/drupal-filesystem/web/themes/custom/rhdp/rhd-frontend/src/styles/assembly/_assembly.scss
@@ -15,3 +15,7 @@
 @import "learning_paths";
 @import "event_list";
 @import "content_with_image";
+
+.assembly:focus {
+  outline: 0;
+}
